[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Sprites/VoidMote-Blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/VoidMoteChase.gd" type="Script" id=3]
[ext_resource path="res://Utils/Hit and Hurt Boxes/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Utils/Controllers/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utils/Hit and Hurt Boxes/HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Utils/Stats/Stats.tscn" type="PackedScene" id=7]

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = SubResource( 11 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 58, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 116, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 174, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 232, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 290, 0, 58, 82 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 2.0

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.000191095, 0.0995605 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.000191095 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 4.0

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[node name="VoidMoteChase" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 33
script = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 5.96046e-08 )
scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 12 )
position = Vector2( 0, -9 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 7 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "stop"
anims/RESET = SubResource( 15 )
anims/start = SubResource( 14 )
anims/stop = SubResource( 13 )

[node name="Tween" type="Tween" parent="."]

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 2

[node name="HitBox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 9 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 24

[node name="HurtBox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincible_end" from="HurtBox" to="." method="_on_HurtBox_invincible_end"]
[connection signal="invincible_start" from="HurtBox" to="." method="_on_HurtBox_invincible_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HitBox"]
[editable path="WanderController"]
[editable path="HurtBox"]
